--- a/TodoListClient/App.config
+++ b/TodoListClient/App.config
@@ -1,14 +1,15 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
   <appSettings>
-    <add key="ida:Tenant" value="[Enter tenant name, e.g. contoso.onmicrosoft.com]" />
-    <add key="ida:ClientId" value="[Enter client ID of the TodoListClient as obtained from Azure Portal, e.g. 82692da5-a86f-44c9-9d53-2f88d52b478b]" />
-    <add key="ida:RedirectUri" value="[Enter redirect URI as entered in Azure Portal, e.g. https://TodoListClient]" />
-    <add key="todo:TodoListResourceId" value="[Enter App ID URI of TodoListService, e.g. https://contoso.onmicrosoft.com/TodoListService]" />
+    <add key="ida:Tenant" value="tiagobrenckgmail.onmicrosoft.com" />
+    <add key="ida:ClientId" value="082eab09-3f1a-4fd0-9bc9-6148bb1b0178" />
+    <add key="ida:RedirectUri" value="https://TodoListClient-OBO" />
+    <add key="todo:TodoListResourceId" value="https://tiagobrenckgmail.onmicrosoft.com/TodoListService-OBO" />
     <add key="ida:AADInstance" value="https://login.microsoftonline.com/{0}" />
-    <add key="todo:TodoListBaseAddress" value="https://localhost:44321" />
+    <add key="todo:TodoListScope" value="https://tiagobrenckgmail.onmicrosoft.com/TodoListService-OBO/user_impersonation" />
+    <add key="todo:TodoListBaseAddress" value="https://localhost:44321/" />
   </appSettings>
 </configuration>
