--- a/TodoListClient/packages.config
+++ b/TodoListClient/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="4.5.1" targetFramework="net45" />
+  <package id="Microsoft.Identity.Client" version="3.0.8" targetFramework="net45" />
 </packages>
