--- a/TodoListClient/App.config
+++ b/TodoListClient/App.config
@@ -4,12 +4,10 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <appSettings>
-    <add key="ida:Tenant" value="tiagobrenckgmail.onmicrosoft.com" />
-    <add key="ida:ClientId" value="082eab09-3f1a-4fd0-9bc9-6148bb1b0178" />
-    <add key="ida:RedirectUri" value="https://TodoListClient-OBO" />
-    <add key="todo:TodoListResourceId" value="https://tiagobrenckgmail.onmicrosoft.com/TodoListService-OBO" />
+    <add key="ida:Tenant" value="[Enter tenant name, e.g. contoso.onmicrosoft.com]" />
+    <add key="ida:ClientId" value="[Enter client ID of the TodoListClient as obtained from Azure Portal, e.g. 82692da5-a86f-44c9-9d53-2f88d52b478b]" />
     <add key="ida:AADInstance" value="https://login.microsoftonline.com/{0}" />
-    <add key="todo:TodoListScope" value="https://tiagobrenckgmail.onmicrosoft.com/TodoListService-OBO/user_impersonation" />
-    <add key="todo:TodoListBaseAddress" value="https://localhost:44321/" />
+    <add key="todo:TodoListScope" value="api://[Enter_client_ID_Of_TodoListService-v2_from_Azure_Portal,_e.g._2ec40e65-ba09-4853-bcde-bcb60029e596]/.default"/>
+    <add key="todo:TodoListBaseAddress" value="https://localhost:44321" />
   </appSettings>
 </configuration>
