--- a/TodoListService/Web.config
+++ b/TodoListService/Web.config
@@ -21,7 +21,7 @@
     <add key="ida:ClientID" value="[Enter client ID of the TodoListService as obtained from Azure Portal, e.g. 82692da5-a86f-44c9-9d53-2f88d52b478b]" />
     <add key="ida:AppKey" value="[Enter password as obtained from Azure Portal, e.g. dYfh0H8iRU7FIBnPcYIil/Af6SSAwkxVhB0mA8DbzdQ=]" />
     <add key="ida:AADInstance" value="https://login.microsoftonline.com/{0}" />
-    <add key="ida:GraphResourceId" value="https://graph.microsoft.com" />
+    <add key="ida:RedirectUri" value="https://localhost:44321/" />
     <add key="ida:GraphUserUrl" value="https://graph.microsoft.com/v1.0/me/" />
   </appSettings>
   <system.web>
