--- a/TodoListService/TodoListService.csproj
+++ b/TodoListService/TodoListService.csproj
@@ -219,7 +219,7 @@
     <Compile Include="Models\UserProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="Utils\ClaimConstraints.cs" />
+    <Compile Include="Utils\ClaimConstants.cs" />
     <Compile Include="Utils\ClaimsPrincipalExtensions.cs" />
     <Compile Include="Utils\MSALPerUserSqlTokenCacheProvider.cs" />
   </ItemGroup>
